--- a/TextTrade/app/src/main/res/values/colors.xml
+++ b/TextTrade/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="Yellow">#ffff00</color>
+    <color name="DarkerYellow">#b2b200</color>
+    <color name="black">#000</color>
 </resources>
