--- a/TextTrade/app/src/main/res/values/colors.xml
+++ b/TextTrade/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="Yellow">#ffff00</color>
     <color name="DarkerYellow">#b2b200</color>
     <color name="black">#000</color>
+    <color name="Red">#FF0000</color>
 </resources>
