--- a/TextTrade/app/src/main/res/layout/notifications_fragment.xml
+++ b/TextTrade/app/src/main/res/layout/notifications_fragment.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--The code in here would be about anything the user has
-bought or is buying -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,14 +12,6 @@ bought or is buying -->
         android:layout_alignParentStart="true"
         android:background="@color/DarkerYellow">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/purchasing"
-            android:textAlignment="center"
-            android:textSize="20sp" />
     </android.support.v7.widget.Toolbar>
 
     <ListView
@@ -31,4 +21,17 @@ bought or is buying -->
         android:layout_height="fill_parent">
 
     </ListView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="14dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/no"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
 </RelativeLayout>
