--- a/TextTrade/app/src/main/res/layout/selling_fragment.xml
+++ b/TextTrade/app/src/main/res/layout/selling_fragment.xml
@@ -5,19 +5,34 @@ sold or is selling -->
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="@string/disposing"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_centerHorizontal="true"/>
-
-    <ListView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/DarkerYellow">
 
-    </ListView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="@string/disposing"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textView" />
+
+    </android.support.v7.widget.Toolbar>
+
+            <ListView
+                android:id="@+id/listview"
+                android:layout_above="@+id/toolbar"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+            </ListView>
+
+
 </RelativeLayout>
